# esp32-meteopod

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults.example  test_runner.py
.github/workflows/: build.yml  test.yml
components/drivers/: CMakeLists.txt  Kconfig.projbuild  README.md  i2c.c  i2c.h  mqtt.c  mqtt.h  uart.c  uart.h  wifi.c  wifi.h
components/ota/: CMakeLists.txt  Kconfig  ota_update.c  ota_update.h
components/sensors/: CMakeLists.txt  Kconfig.projbuild  bh1750.c  bh1750.h  bme280.c  bme280.h  dfrobot_as3935.c  dfrobot_as3935.h  dfrobot_rainfall_sensor.c  dfrobot_rainfall_sensor.h  mpu6050.c  mpu6050.h  sensors.c  sensors.h  sht31.c  sht31.h  wind_sensor.c  wind_sensor.h
components/sensors/test/: CMakeLists.txt  i2c_test_stubs.c  test_bh1750.c  test_bme280.c  test_dfrobot_as3935.c  test_dfrobot_rainfall_sensor.c  test_mpu6050.c  test_sensor.c  test_sht31.c  test_wind_sensor.c
components/utils/: CMakeLists.txt  system_monitor.c  system_monitor.h  utils.c  utils.h
components/utils/test/: CMakeLists.txt  test_system_monitor.c  test_utils.c
components/watchdog/: CMakeLists.txt  watchdog.c  watchdog.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  sensors.c  sensors.h  system_monitor.c  system_monitor.h  wifi.c
main/include/: app_context.h  main.h  task_config.h
unity-app/: CMakeLists.txt  README.md  test_unit_case.py
